[gd_scene load_steps=5 format=3 uid="uid://pcegudu3yqlc"]

[ext_resource type="Texture2D" uid="uid://cucmlgg6iyj5p" path="res://desaign/task.png" id="1_bvpdr"]
[ext_resource type="FontFile" uid="uid://ddhtc6ay14j35" path="res://desaign/retro_computer_personal_use.ttf" id="2_20okj"]
[ext_resource type="Script" path="res://user/list_user_task.gd" id="2_rdive"]
[ext_resource type="Texture2D" uid="uid://jgysgkcusiiw" path="res://desaign/exit.png" id="4_vee76"]

[node name="listUserTask" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_bvpdr")
script = ExtResource("2_rdive")

[node name="delete" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -68.0
offset_bottom = 67.0
grow_horizontal = 0
icon = ExtResource("4_vee76")
flat = true

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_right = 44.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("2_20okj")
theme_override_font_sizes/font_size = 18
text = "cheklist"

[node name="task" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -34.5
offset_right = 403.0
offset_bottom = 59.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_20okj")
theme_override_font_sizes/font_size = 21
allow_reselect = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -10.5
offset_right = -7.0
offset_bottom = 61.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_20okj")
theme_override_font_sizes/font_size = 15

[connection signal="button_down" from="delete" to="." method="_on_delete_button_down"]
[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="task" to="." method="_on_task_item_selected"]
